src/style.css
* {
  box-sizing: border-box;
}

:root {
  --primary-color: rgb(51, 51, 51);
  --secondary-color: rgb(221, 221, 221);
  --tertiary-color: rgb(238, 238, 238);
  --hover-color: rgb(200, 200, 200);
}

body {
  background-color: var(--tertiary-color);
  min-height: 100vh;
  color: var(--primary-color);
}

.container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  justify-content: flex-start;
}
.logo-section {
  background-color: var(--primary-color);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 0;
}

.logo-text {
  font-family: "Baskervville", serif;
  font-size: 60px;
  letter-spacing: -1px;
  color: var(--tertiary-color);
  font-weight: bold;
  display: flex;
  align-items: center;
}

@media screen and (max-width: 700px) {
  .logo-text {
    font-size: 40px;
    letter-spacing: -0.5px;
  }
}

.hamburger-button {
  font-size: 40px;
  color: var(--tertiary-color);
  padding-right: 20px;
  display: none;
}

@media screen and (max-width: 700px) {
  .hamburger-button {
    display: block;
  }
}
.main-section {
  display: flex;
  width: 100%;
  flex-grow: 2;
  font-family: "Open Sans", sans-serif;
}

@media screen and (max-width: 700px) {
  .main-section {
    flex-direction: column;
  }
}

.menu-section {
  flex-grow: 1;
  max-width: 300px;
  min-width: 200px;
  background-color: var(--secondary-color);
  display: flex;
  justify-content: center;
}

@media screen and (max-width: 700px) {
  .menu-section {
    max-width: 100%;
    width: 100%;
    display: none;
  }
}

.unhide-menu {
  display: flex;
}

.menu-section-inner-container {
  width: 80%;
  margin-top: 30px;
}

.menu-section-button {
  display: block;
  width: 100%;
  background-color: var(--secondary-color);
  padding: 7px 10px;
  border: 2px solid var(--secondary-color);
  border-radius: 10px;
  text-align: left;
  color: var(--primary-color);
  -webkit-tap-highlight-color: transparent;
}

.menu-section-button:hover {
  background-color: var(--hover-color);
  cursor: pointer;
}
.content-section {
  flex-grow: 1;
  flex-shrink: 0;
}

.content-inner-container {
  width: 95%;
  max-width: 800px;
  min-width: 500px;
  margin: 0 auto;
  margin-top: 30px;
  padding: 0 20px;
}
.logo-img {
  width: 100px;
}

@media screen and (max-width: 700px) {
  .logo-img {
    width: 70px;
  }
}
.footer-section {
  background-color: var(--primary-color);
  height: 30px;
  justify-self: flex-end;
}

.heading {
  font-size: 26px;
  font-weight: bold;
  margin: 10px 0;
}

.menu-icon {
  margin-right: 15px;
}

.hide {
  display: none !important;
}

.add-project-container {
  margin-top: 10px;
}
.add-project-input {
  width: 100%;
  padding: 10px;
  border-radius: 5px;
  border: 1px solid var(--primary-color);
}

.button-main {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  border-radius: 5px;
  font-weight: bold;
  cursor: pointer;
}

.button-add {
  background-color: rgb(170, 255, 170);
  border: 1px solid rgb(153, 221, 153);
  width: 45%;
}

.button-cancel {
  background-color: rgb(255, 190, 190);
  border: 1px solid rgb(238, 173, 173);
  width: 45%;
}

.button-main:hover {
  filter: brightness(90%);
}

.task-container {
  display: grid;
}

.add-project-buttons-container {
  display: flex;
  justify-content: space-between;
  margin-top: 10px;
}

.content-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.content-title {
  font-size: 50px;
  font-weight: bold;
}

.button-delete-project {
  background-color: rgb(255, 190, 190);
  border: 1px solid rgb(238, 173, 173);
}

